docs: document nfx-svg in the README; wire it into root setupEnv/buildAll
- README: new "SVG rendering with nfx-svg" section with load/SvgView/zoom,
  fill tint + SvgFillMode blend modes, location property (FXML) and CSS
  styleables, plus the svg-zoom-in/out screenshots; add nfx-svg to the
  intro, modules table, requirements, project layout, tasks and credits.
- root build.gradle: setupEnv now vendors Skia (:nfx-svg:setupEnv) and
  buildAll builds the Skia shim (:nfx-svg:buildAll), so the documented
  commands actually set up and build the SVG module.