@@ -12,6 +12,12 @@ embed the full `PdfViewer` control (toolbar, thumbnails, search, the lot) into
 your app with a single line, or pull in just the `nfx-pdfium` engine and build
 your own UI on top of it.
 
+The same build also ships **`nfx-svg`** — a completely standalone JavaFX **SVG**
+library backed by native [Skia](https://skia.org). It renders SVG documents
+**pixel-perfect at any size** through a reactive, DPI-aware `SvgView` node, and
+shares nothing with the PDF stack, so you can drop it into any JavaFX app on its
+own. See [SVG rendering with `nfx-svg`](#svg-rendering-with-nfx-svg).
+
 > Use at your own risk. This software is provided as-is, without any warranty.
 > See the [License and credit](#license-and-credit) section below for the full
 > terms. In short: you are free to use it, including in commercial projects,
@@ -24,16 +30,18 @@ your own UI on top of it.
 | ![Continuous view with text selection and thumbnails](screenshots/text-selection.png)<br>**Continuous view — text selection & thumbnail sidebar** | ![Chrome-style print dialog with a live preview](screenshots/print.png)<br>**Print dialog — live, scrollable page preview** |
 | ![Document Properties card](screenshots/doc-properties.png)<br>**Document Properties card** | ![Password prompt for encrypted PDFs](screenshots/pass.png)<br>**Password prompt for encrypted documents** |
 | ![Page right-click context menu](screenshots/context-menu.png)<br>**Page context menu — text, find, pan, zoom, rotate & more** |  |
+| ![An SVG rendered crisply when zoomed out](screenshots/svg-zoom-out.png)<br>**`SvgView` — crisp when zoomed out** | ![The same SVG zoomed in and still razor-sharp](screenshots/svg-zoom-in.png)<br>**`SvgView` — razor-sharp zoomed in (re-rasterized, never upscaled)** |
 
 ## Modules
 
-The repository is a single Gradle build with three modules:
+The repository is a single Gradle build with four modules:
 
 | Module | What it is |
 |---|---|
 | **`nfx-pdfium`** | The standalone, cross-platform JavaFX PDF engine. Native PDFium via FFM plus a thin C shim. Public API under `xss.it.nfx.pdfium.*`. Renders pages, extracts text, runs searches and ships a reactive, zoomable page node. Usable entirely on its own — see [`nfx-pdfium/README.md`](nfx-pdfium/README.md). |
+| **`nfx-svg`** | A standalone, cross-platform JavaFX **SVG** library backed by native [Skia](https://skia.org) (its `modules/svg` engine) through FFM and a thin C++ shim. Public API under `xss.it.nfx.svg.*`. Renders SVG **pixel-perfect at any size** and ships a reactive, DPI-aware `SvgView` node with optional recolor tinting. Depends only on the JDK and JavaFX — see [SVG rendering with `nfx-svg`](#svg-rendering-with-nfx-svg). |
 | **`pdf-viewer`** | The `PdfViewer` JavaFX control built on top of the engine: toolbar, thumbnail sidebar, single-page and continuous views, search panel, document-properties card and password prompt. Public API under `xss.it.ultimate.pdf.viewer.*`. |
-| **`demo`** | A small runnable JavaFX app that drops a `PdfViewer` into a window. Launch it with `./gradlew :demo:run`. |
+| **`demo`** | A small runnable JavaFX app with the `PdfViewer` and an `SvgView` showcase in two tabs. Launch it with `./gradlew :demo:run`. |
 
 All rendering, text extraction and search come entirely from `nfx-pdfium`
 (PDFium). The `pdf-viewer` module is purely the user interface and the viewer
@@ -141,13 +149,17 @@ state around it.
 
 - JDK 25 (the build uses Gradle toolchains, so it can fetch a matching JDK for you).
 - JavaFX 25 (pulled in automatically by the build).
-- A C toolchain to compile the small native shim on your machine: CMake, a C
-  compiler (MSVC or MinGW gcc on Windows, gcc on Linux, clang on macOS) and,
-  optionally, Ninja for faster builds. The `setupEnv` task checks all of this
-  for you and tells you exactly what is missing.
+- A C/C++ toolchain to compile the small native shims on your machine: CMake,
+  and a compiler. The PDFium shim (C) builds with MSVC or MinGW gcc on Windows,
+  gcc on Linux, clang on macOS. The Skia shim (C++) for `nfx-svg` needs a
+  **C++17** compiler whose ABI matches Skia's prebuilt libraries — on Windows
+  that means **Visual Studio 2019/2022 with the "Desktop development with C++"
+  workload** (it builds via the Visual Studio CMake generator, so no Developer
+  Command Prompt is required); on Linux/macOS, the system gcc/clang. The
+  `setupEnv` task checks all of this for you and tells you exactly what is missing.
 
-The PDFium binaries themselves are prebuilt and downloaded for you — you do not
-need to build PDFium from source.
+The PDFium and Skia binaries themselves are prebuilt and downloaded for you — you
+do not need to build either engine from source.
 
 ## Getting started
 
@@ -269,15 +281,106 @@ try (PdfDocument doc = PdfDocument.open(Path.of("file.pdf"))) {
 }
 ```
 
+## SVG rendering with `nfx-svg`
+
+`nfx-svg` is a completely separate, standalone module: a JavaFX SVG library
+backed by native [Skia](https://skia.org). Because an SVG is vector art,
+`SvgView` re-rasterizes it **fresh at the exact device-pixel size it is shown
+at**, so it stays **pixel-perfect and crisp at any size or zoom** — there is no
+blurry bitmap being stretched. It is fully DPI / Retina aware and re-renders
+automatically when the window's scale changes.
+
+|  |  |
+|:---:|:---:|
+| ![SVG zoomed out, crisp](screenshots/svg-zoom-out.png)<br>**Zoomed out** | ![Same SVG zoomed in, still crisp](screenshots/svg-zoom-in.png)<br>**Zoomed in — same source, re-rasterized, not upscaled** |
+
+### Loading and showing an SVG
+
+Load a document from a file, URL, stream, byte array, or a raw SVG string, then
+drop it into the `SvgView` node:
+
+```java
+import xss.it.nfx.svg.SvgDocument;
+import xss.it.nfx.svg.scene.SvgView;
+
+SvgDocument svg = SvgDocument.load(Path.of("logo.svg"));   // also: File, URL, URI,
+SvgDocument inline = SvgDocument.loadContent("<svg .../>"); // InputStream, byte[], String
+
+SvgView view = new SvgView(svg);
+view.setFitWidth(256);   // size it like an ImageView (preserveRatio is on by default)
+// ...or scale freely with zoom; it stays crisp either way:
+view.setZoom(2.0);
+```
+
+`SvgView` behaves like an `ImageView`, but resolution-independent. Size it with
+`fitWidth` / `fitHeight` (with `preserveRatio`), let a layout pane resize it, or
+drive `zoom` — whatever size it ends up, the SVG is rendered to fill it sharply.
+You can also point it straight at a location, which is exposed as a JavaFX
+`String` property so it works from FXML and is visible in SceneBuilder:
+
+```java
+SvgView fromUrl = new SvgView("https://example.com/icon.svg"); // path, URL or classpath
+```
+
+```xml
+<SvgView location="@icon.svg" fitWidth="48" preserveRatio="true"/>
+```
+
+### Recoloring (tint)
+
+By default the SVG keeps its own colors. Set a `fill` to recolor it — composited
+in native Skia and **masked to the SVG's own shape**, so only the painted pixels
+change, never the area around them. The `fillMode` picks how the fill blends
+(`NONE` by default, i.e. no change):
+
+```java
+import xss.it.nfx.svg.SvgFillMode;
+import javafx.scene.paint.Color;
+
+view.setFill(Color.web("#7e57c2"));        // override color
+view.setFillMode(SvgFillMode.SRC_OVER);    // flat recolor (great for monochrome icons)
+view.setFillMode(SvgFillMode.MULTIPLY);    // ...or a shaded tint that keeps the artwork's detail
+```
+
+`SvgFillMode` exposes the full set of Skia blend modes — `SRC_OVER`, `SRC_IN`,
+`SRC_ATOP`, `MULTIPLY`, `SCREEN`, `OVERLAY`, `DARKEN`, `LIGHTEN`, `COLOR`,
+`HUE`, and more (including a true Porter-Duff `SRC_IN` that JavaFX's own
+`BlendMode` lacks).
+
+### Styling from CSS
+
+`SvgView` has three styleable colors:
+
+```css
+.svg-view {
+    -svg-background: transparent;   /* fill painted behind the SVG */
+    -svg-fill: #7e57c2;             /* optional recolor tint (unset = own colors) */
+    -svg-fill-mode: multiply;       /* how the tint blends */
+}
+```
+
+### Using it
+
+```
+--enable-native-access=nfx.svg
+```
+
+The native Skia shim and prebuilt Skia binaries are handled exactly like PDFium —
+`./gradlew :nfx-svg:setupEnv` vendors Skia for your platform, and `:nfx-svg:smoke`
+is a headless parse-and-render check. The module depends on nothing but the JDK
+and JavaFX, with no third-party jars.
+
 ## Project layout
 
 ```
 ultimate-pdf-viewer/
 ├── nfx-pdfium/        the standalone PDF engine + native shim (CMake/PDFium)
+├── nfx-svg/           the standalone SVG engine + native shim (CMake/Skia)
 ├── pdf-viewer/        the PdfViewer JavaFX control
-├── demo/              a runnable demo app
+├── demo/              a runnable demo app (PDF + SVG tabs)
 ├── screenshots/       images used in this README
 ├── demo.pdf           sample document used by the demo and smoke test
+├── sample.svg         sample SVG used by the demo and smoke test
 └── build.gradle       root build, with the setupEnv and buildAll tasks
 ```
 
@@ -285,11 +388,13 @@ A few useful Gradle tasks:
 
 | Task | What it does |
 |---|---|
-| `setupEnv` | Checks the native toolchain and downloads PDFium for your platform. Add `-Pall` for every platform. |
-| `buildAll` | Builds the native shim and assembles every module. |
-| `:demo:run` | Launches the GUI demo. |
-| `:nfx-pdfium:smoke` | Headless render / text / search check. |
-| `:nfx-pdfium:fetchPdfium` | Downloads PDFium for all platforms (what `setupEnv -Pall` calls). |
+| `setupEnv` | Checks the native toolchain and downloads PDFium + Skia for your platform. Add `-Pall` for every platform. |
+| `buildAll` | Builds both native shims and assembles every module. |
+| `:demo:run` | Launches the GUI demo (PDF + SVG tabs). |
+| `:nfx-pdfium:smoke` | Headless PDF render / text / search check. |
+| `:nfx-svg:smoke` | Headless SVG parse / render check. |
+| `:nfx-pdfium:fetchPdfium` | Downloads PDFium for all platforms. |
+| `:nfx-svg:fetchSkia` | Downloads Skia for all platforms. |
 
 ## License and credit
 
@@ -308,5 +413,9 @@ See the [LICENSE](LICENSE) file for the full text.
 This project bundles prebuilt PDFium binaries from
 [bblanchon/pdfium-binaries](https://github.com/bblanchon/pdfium-binaries).
 PDFium is Google's PDF library and is distributed under its own (BSD-style)
-license, included with those binaries. PDFium and its license belong to their
-respective authors and are not covered by the attribution terms above.
+license, included with those binaries. It likewise bundles prebuilt
+[Skia](https://skia.org) binaries (used by `nfx-svg`) from
+[JetBrains/skia-pack](https://github.com/JetBrains/skia-pack); Skia is Google's
+2D graphics library, distributed under its own BSD license. PDFium, Skia and
+their licenses belong to their respective authors and are not covered by the
+attribution terms above.
